--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,26 @@
-# Discord Bot Token from Discord Developer Portal
+# Server Configuration
+PORT=3000
+SESSION_SECRET=your_strong_session_secret_here
+
+# Steam Web API Key
+# Get yours from: https://steamcommunity.com/dev/apikey
+STEAM_API_KEY=your_steam_api_key_here
+
+# Supabase Credentials
+# Found in your Supabase project settings > API
+SUPABASE_URL=your_supabase_project_url_here
+SUPABASE_KEY=your_supabase_anon_key_here
+
+# Email (Nodemailer) Configuration for sending notifications
+# Example for Gmail:
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_PORT=465
+# EMAIL_USER=your_email@gmail.com
+# EMAIL_PASS=your_gmail_app_password_here
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASS=
+
+# Discord Bot Token (if you extend the bot's functionality)
 DISCORD_BOT_TOKEN=your_bot_token_here
